sdi lab01-02 added

--- a/Semester 4/Web Programming/lab02/image_table/index.html
+++ b/Semester 4/Web Programming/lab02/image_table/index.html
@@ -8,13 +8,13 @@
 <body>
 <table>
     <tr>
-        <td><img alt = "tony mama" src="el_cucuy.jpg"></td>
-        <td><img alt = "george tata" src="gsp.jpg"></td>
+        <td><img alt="tony " src="el_cucuy.jpg"></td>
+        <td><img alt="george " src="gsp.jpg"></td>
     </tr>
 
     <tr>
-        <td><img alt = "conor fratele" src="mcgregor.jpg"></td>
-        <td><img alt = "fuck you" src="nate_diaz.jpg"></td>
+        <td><img alt="conor " src="mcgregor.jpg"></td>
+        <td><img alt="nate " src="nate_diaz.jpg"></td>
     </tr>
 </table>
 </body>
