--- a/Semester 4/Web Programming/lab_01/mcgregor.html
+++ b/Semester 4/Web Programming/lab_01/mcgregor.html
@@ -14,7 +14,7 @@
      alt ="The double champ"
      width="500"
     height="400">
-       <br> <figurecaption>"There’s no talent here, this is hard work. This is an obsession."</figurecaption>
+       <br> <figcaption>"There’s no talent here, this is hard work. This is an obsession."</figcaption>
     </figure>
 
     </header>
@@ -27,12 +27,12 @@
     He is a former Ultimate Fighting Championship (UFC) featherweight and lightweight double-champion.<br>
     He is the first UFC fighter to hold UFC championships in two weight classes simultaneously.<br>
     He is also the former Cage Warriors featherweight and lightweight champion.<br>
+</p>
     <div>
     <video>
         <source src="Conor%20McGregor%20-%20The%20double%20champ%20does%20want%20he%20wants!.mp4" type="video/mp4">
     </video>
     </div>
-</p>
 
 </section>
 
